2019-03-27  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/88247
	* gfortran.dg/associate_47.f90: New test.

2019-03-27  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/89463
	* gcc.dg/guality/pr89463.c: New testcase.

2019-03-26  Uroš Bizjak  <ubizjak@gmail.com>

	PR target/89827
	* gcc.target/i386/pr89827.c: New test.

2019-03-26  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* g++.dg/abi/lambda-static-1.C: Handle Solaris as comdat group
	syntax.

2019-03-26  Bin Cheng  <bin.cheng@linux.alibaba.com>

	PR tree-optimization/81740
	* gcc.dg/vect/pr81740-1.c: New testcase.
	* gcc.dg/vect/pr81740-2.c: Likewise.

2019-03-26  Iain Buclaw  <ibuclaw@gdcproject.org>

	* gdc.test/gdc-test.exp (gdc-do-test): Sort and remove duplicate
	options in permute args tests.

2019-03-26  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/84598
	* g++.dg/ext/pr84598.C: New.

2019-03-26  Jakub Jelinek  <jakub@redhat.com>

	PR c++/89796
	* g++.dg/gomp/pr89796.C: New test.
	* gcc.dg/gomp/pr89796.c: New test.

2019-03-25  David Malcolm  <dmalcolm@redhat.com>

	PR rtl-optimization/88347
	PR rtl-optimization/88423
	* gcc.c-torture/compile/pr88347.c: New test.
	* gcc.c-torture/compile/pr88423.c: New test.

2019-03-25  Martin Sebor  <msebor@redhat.com>

	PR c/89812
	* gcc.dg/attr-aligned-3.c: New test.

2019-03-25  Johan Karlsson <johan.karlsson@enea.com>

	PR debug/86964
	* gcc.dg/debug/dwarf2/pr86964.c: New testcase.

2019-03-25  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/84661
	PR c++/85013
	* g++.dg/concepts/pr84661.C: New.
	* g++.dg/torture/pr85013.C: Likewise.

2019-03-25  Marek Polacek  <polacek@redhat.com>

	PR c++/89214 - ICE when initializing aggregates with bases.
	* g++.dg/cpp1z/aggr-base8.C: New test.
	* g++.dg/cpp1z/aggr-base9.C: New test.

	PR c++/89705 - ICE with reference binding with conversion function.
	* g++.dg/cpp0x/rv-conv2.C: New test.

2019-03-25  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/89789