@@ -1,3 +1,7 @@
+2019-03-27  Richard Biener  <rguenther@suse.de>
+
+	* gcc.dg/torture/20190327-1.c: New testcase.
+
 2019-03-27  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/88247
